--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'kotlin'
+    id 'org.jetbrains.kotlin.jvm'
     id 'java-gradle-plugin'
     id 'maven-publish'
 }
@@ -13,6 +14,7 @@ dependencies {
 
     compileOnly gradleApi()
     compileOnly 'com.android.tools.build:gradle:7.4.1'
+    api 'org.codehaus.groovy:groovy-xml:3.0.9'
 }
 
 gradlePlugin {
