--- a/example/build.gradle
+++ b/example/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'com.jakewharton.butterknife'
     id 'kotlin-kapt'
-    id 'idguard'
+//    id 'idguard'
 }
 
 android {
