--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -14,6 +14,9 @@ dependencies {
 
     compileOnly gradleApi()
     compileOnly 'com.android.tools.build:gradle:7.4.1'
+
+    implementation "com.github.javaparser:javaparser-core:3.25.4"
+
 }
 
 gradlePlugin {
