change java parser to qdox and rewrite class parser

--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -15,8 +15,7 @@ dependencies {
     compileOnly gradleApi()
     compileOnly 'com.android.tools.build:gradle:7.4.1'
 
-    implementation "com.github.javaparser:javaparser-core:3.25.4"
-
+    implementation 'com.thoughtworks.qdox:qdox:2.0.3'
 }
 
 gradlePlugin {
