--- a/example/build.gradle
+++ b/example/build.gradle
@@ -14,6 +14,7 @@ plugins {
 //        //support single java file
 //        "com.littlew.example.pf.A.java",
 //    ]
+//    dictCapacity = 5000
 //}
 
 android {
@@ -31,8 +32,11 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            minifyEnabled false
         }
     }
     compileOptions {
